fix(encounters): prevent table cells shifting on hover

--- a/src/main/webapp/cust/mantamatcher/styles/_encounter-pages.less
+++ b/src/main/webapp/cust/mantamatcher/styles/_encounter-pages.less
@@ -112,19 +112,9 @@ td.tdw {
 td.tdw div {
 	height: 16px;
 	overflow-y: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
-
-
-td.tdw:hover div {
-	position: absolute;
-	z-index: 20;
-	background-color: #EFA;
-	outline: 3px solid #EFA;
-	min-height: 16px;
-	height: auto;
-	overflow-y: auto;
-}
-
 
   #tabmenu {
     color: #000;
